--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1,16 +1,6 @@
-body {
-  display: grid;
-  place-items: center;
-  background-color: #b4a7d6;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.wrapper {
-  background-color: #fff9e6;
-  padding: 20px;
-  border-radius: 10px;
-}
-
-h1 {
-  color: #8873be;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
