Make the navbar responsive

--- a/client/src/components/NavbarStyles.css
+++ b/client/src/components/NavbarStyles.css
@@ -52,3 +52,86 @@
   border-radius: 4px;
   transition: all 0.2s ease-in-out;
 }
+
+.fa-bars,
+.fa-times {
+  color: #fff;
+}
+
+.menu-icons {
+  display: none;
+}
+
+.nav-links-mobile {
+  padding: 0.5rem 1rem;
+  white-space: nowrap;
+  background-color: #fafafa;
+  border-radius: 3px;
+  text-decoration: none;
+  font-size: 1rem;
+  color: #222;
+  font-weight: 500;
+}
+
+@media screen and (max-width: 850px) {
+  .NavbarItems {
+    z-index: 99;
+  }
+
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background: rgba(255, 255, 255, 0.25);
+    width: 100%;
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    border-radius: 13px;
+    height: auto;
+    position: absolute;
+    top: 0;
+    left: -110%;
+    align-items: stretch;
+    padding: 80px 0 30px 0;
+    margin: 0;
+    z-index: -1;
+    transition: all 0.5s ease-in-out;
+  }
+
+  .nav-menu.active {
+    left: 0;
+    transition: 300ms;
+  }
+
+  .nav-links {
+    display: block;
+    widows: 100%;
+    padding: 2rem 0;
+    color: #222;
+  }
+
+  .nav-links:hover {
+    background: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(20px);
+  }
+
+  .menu-icons {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 60%);
+    font-size: 1.8rem;
+    cursor: pointer;
+  }
+
+  .nav-links-mobile {
+    padding: 1.5rem;
+    display: block;
+    text-align: center;
+    font-size: 1.3rem;
+    font-weight: bold;
+    width: 80%;
+    margin: auto;
+  }
+}
