--- a/client/src/components/WelcomeStyles.css
+++ b/client/src/components/WelcomeStyles.css
@@ -1,6 +1,10 @@
 .home {
   width: 100%;
-  height: 200vh;
+  height: 100vh;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   background: rgb(222, 66, 66);
   background: linear-gradient(
     90deg,
