--- a/client/src/css/NotesHolderStyles.css
+++ b/client/src/css/NotesHolderStyles.css
@@ -1,14 +1,47 @@
 .notes {
+  padding-top: 25%;
   width: 100%;
-  height: 200vh;
-  text-align: center;
+}
+
+.noteContainer {
+  display: grid;
+  background-color: blanchedalmond;
+  margin-top: 20px;
+}
+
+.noteContainer::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: url('/img/bg.jpg') no-repeat center;
+  background-size: cover;
+  filter: blur(50px);
+  z-index: -1;
+}
+
+.eachNote {
   display: flex;
-  justify-content: center;
+  padding: 1rem;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.btn_control {
+  display: flex;
   flex-direction: column;
-  background: rgb(222, 66, 66);
-  background: linear-gradient(
-    90deg,
-    rgba(222, 66, 66, 1) 0%,
-    rgba(212, 32, 32, 1) 94%
-  );
+}
+
+.btn-red {
+  background-color: red;
+  width: 100%;
+  padding: 0.5rem 1rem;
+  color: #fff;
+  font-size: 1.1rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s;
 }
