--- a/client/src/css/NotesStyles.css
+++ b/client/src/css/NotesStyles.css
@@ -1,14 +1,43 @@
-.note {
+.addNote {
   width: 100%;
-  height: 100vh;
-  text-align: center;
   display: flex;
   justify-content: center;
+}
+
+.formNote {
+  display: flex;
   flex-direction: column;
-  background: rgb(222, 66, 66);
-  background: linear-gradient(
-    90deg,
-    rgba(222, 66, 66, 1) 0%,
-    rgba(212, 32, 32, 1) 94%
-  );
+  width: 70%;
+}
+
+.field {
+  /* width: 100%; */
+  border: 2px solid rgba(0, 0, 0, 0);
+  outline: none;
+  background-color: rgba(230, 230, 230, 0.6);
+  padding: 0.5rem 1rem;
+  font-size: 1.1rem;
+  margin-bottom: 22px;
+  transition: 0.3s;
+}
+
+.btn {
+  /* width: 100%; */
+  padding: 0.5rem 1rem;
+  background-color: #2ecc71;
+  color: #fff;
+  font-size: 1.1rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.btn:hover {
+  background-color: #27ae60;
+}
+
+.field:focus {
+  border: 2px solid rgba(30, 85, 250, 0.47);
+  background-color: #fff;
 }
