--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -4,3 +4,20 @@
   box-sizing: border-box;
   font-family: sans-serif;
 }
+
+.App {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 50px;
+  background: rgb(222, 66, 66);
+  background: linear-gradient(
+    90deg,
+    rgb(226, 118, 118) 0%,
+    rgb(107, 40, 40) 94%
+  );
+}
