--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -12,5 +12,11 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  padding: 20px 50px;
+  background: rgb(0, 212, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 212, 255, 1) 3%,
+    rgba(120, 212, 208, 0.9304096638655462) 23%,
+    rgba(59, 52, 176, 1) 99%
+  );
 }
