--- a/client/src/css/EditNotesStyles.css
+++ b/client/src/css/EditNotesStyles.css
@@ -8,14 +8,15 @@
   align-items: center;
   padding: 20px 100px;
   background: rgb(222, 66, 66);
-  background: linear-gradient(
-    90deg,
-    rgb(226, 118, 118) 0%,
-    rgb(107, 40, 40) 94%
-  );
+  background:
+    linear-gradient(
+      90deg,
+      rgb(226, 118, 118) 0%,
+      rgb(107, 40, 40) 94%
+    );
 }
 
-.container:after {
+.container::after {
   content: '';
   position: absolute;
   width: 100%;
@@ -36,7 +37,7 @@
   align-items: center;
   text-align: center;
   background-color: #fff;
-  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+  box-shadow: 0 0 19px 5px rgba(0, 0, 0, 0.19);
 }
 
 .left {
@@ -55,7 +56,7 @@ h2 {
   margin-bottom: 10px;
 }
 
-h2:after {
+h2::after {
   content: '';
   position: absolute;
   left: 50%;
@@ -111,6 +112,7 @@ textarea {
   .contact-box {
     grid-template-columns: 1fr;
   }
+
   .left {
     height: 200px;
   }
