--- a/client/src/css/WelcomeStyles.css
+++ b/client/src/css/WelcomeStyles.css
@@ -6,12 +6,13 @@
   justify-content: center;
   flex-direction: column;
   background: rgb(0, 212, 255);
-  background: linear-gradient(
-    90deg,
-    rgba(0, 212, 255, 1) 3%,
-    rgba(120, 212, 208, 0.9304096638655462) 23%,
-    rgba(59, 52, 176, 1) 99%
-  );
+  background:
+    linear-gradient(
+      90deg,
+      rgba(0, 212, 255, 1) 3%,
+      rgba(120, 212, 208, 0.9304096638655462) 23%,
+      rgba(59, 52, 176, 1) 99%
+    );
 }
 
 button {
